# RabitQ_transplant

./: .gitignore  CMakeLists.txt  command.txt  run.py  test.cpp  test.py
data/: groundtruth.py  ivf.py  rabitq.py
script/: index.sh  index_batch.py  search.sh  search_batch.py
src/: fast_scan.h  index.cpp  ivf_rabitq.h  matrix.h  search.cpp  space.h  utils.h
